src/objects/Mana_Food_Quantity_Code__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13x2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13x3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16x2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16x3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23x2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24x2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24x3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3x2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <label>Food</label>
        <referenceTo>Mana_Food__c</referenceTo>
        <relationshipLabel>Quantity Codes</relationshipLabel>
        <relationshipName>Quantity_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Mana Food Quantity Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Food__c</columns>
        <columns>Quantity__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I70000000QRo3EAG_00N70000002tPxTEAU</fullName>
        <active>true</active>
        <field>Mana_Food_Consumption_Record__c.Quantity_Code__c</field>
        <filterItems>
            <field>$Source.Food__c</field>
            <operation>equals</operation>
            <valueField>Mana_Food_Quantity_Code__c.Food__c</valueField>
        </filterItems>
        <infoMessage>Select lookup codes for this record.</infoMessage>
        <isOptional>false</isOptional>
        <name>Mana Food Consumption Record_Quantity Co</name>
        <sourceObject>Mana_Food_Consumption_Record__c</sourceObject>
    </namedFilters>
    <pluralLabel>Mana Food Quantity Code</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>